[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/ships/Player.gd" type="Script" id=1]
[ext_resource path="res://gameArt/SpaceShooterRedux/PNG/playerShip1_blue.png" type="Texture" id=2]
[ext_resource path="res://gameArt/playerShip1_blue.png" type="Texture" id=3]
[ext_resource path="res://gameArt/playerShip_damaged.png" type="Texture" id=4]
[ext_resource path="res://audio/soundfx/player_hit.wav" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "damage",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 38.0556
height = 19.3661

[node name="Player" type="Area2D"]
position = Vector2( 0, 650 )
z_index = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
max_health = 25
speed = 300
reload_time = 0.1

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
speed_scale = 2.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="playerHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
